--- a/package.json
+++ b/package.json
@@ -1,23 +1,24 @@
 {
-    "name": "currency-api",
-    "version": "0.5.0",
-    "description": "currency-api",
-    "main": "index.js",
-    "scripts": {
-      "start": "vercel dev",
-      "dev": "nodemon ./index.js"
-    },
-    "dependencies": {
-      "body-parser": "^1.20.2",
-      "cors": "^2.8.5",
-      "dotenv": "^16.3.1",
-      "express": "^4.18.2",
-      "morgan": "^1.10.0",
-      "nodemon": "^3.0.1"
-    },
-    "keywords": [
-      "vercel"
-    ],
-    "author": "Hakan Ünal https://hakanunal.com",
-    "license": "MIT"
-  }
+  "name": "currency-api",
+  "version": "0.5.0",
+  "description": "currency-api",
+  "main": "index.js",
+  "scripts": {
+    "start": "vercel dev",
+    "dev": "nodemon ./index.js"
+  },
+  "dependencies": {
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "morgan": "^1.10.0",
+    "nodemon": "^3.0.1",
+    "swagger-ui-express": "^5.0.0"
+  },
+  "keywords": [
+    "vercel"
+  ],
+  "author": "Hakan Ünal https://hakanunal.com",
+  "license": "MIT"
+}
